fixing the right floated images and spacing their adjacent text

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -115,6 +115,29 @@ p {
   margin-bottom:0;
 }
 
+.row4_col1{
+  position: relative;
+  right: 25px;
+  top: 300px;
+  font-size: 1.5em;
+  font-weight: 400;
+  margin-bottom:0;
+  text-align: right;
+}
+
+/*
+.row4_col1{
+  position: relative;
+  left: 35px;
+  font-size: 1.5em;
+  font-weight: 400;
+  top:300px;
+  text-align: right;
+  width: 30%;
+  display: inline-block;
+  margin:auto 30px auto 0;
+}*/
+
 .little_rover {
   position:relative;
   left: 25px;
@@ -126,24 +149,19 @@ p {
   margin-bottom:0;
   text-decoration-thickness: 1px;
 }
-
-.row4_col1{
+/*
+.pic3 {
   position: relative;
-  left: 35px;
-  font-size: 1.5em;
-  font-weight: 400;
-  top:300px;
-  text-align: right;
-  width: 30%;
-  display: inline-block;
-  margin:auto 30px auto 0;
-}
+  top: 70px;
+  background-color: black;
+  float: left;
+}*/
 
 .pic4 {
   position: relative;
   top: 80px;
+  background-color: black;
   float: right;
-  margin-left: 0;
 
 }
 
